--- a/src/styles/blocks/buttons.scss
+++ b/src/styles/blocks/buttons.scss
@@ -1,19 +1,40 @@
+.to-by-tickets {
+  background-color: $color-white;
+}
+
 .by-ticket {
   position: relative;
   box-sizing: border-box;
   display: flex;
   align-items: center;
+  text-align: center;
   justify-content: center;
-
   width: 280px;
   height: 50px;
   border: 1px solid $color-green;
+  cursor: pointer;
+
+  text-transform: uppercase;
+  font-weight: $middle-font;
+  color: $color-black;
+  background-color: $color-white;
+  transition: background-color $effectDuration linear;
+
+  @include hover(transform, scale(1.01));
+
+  &:hover {
+    color: $color-grey;
+    background-color: #e0e0e0;
+    
+  }
 
   @include onTablet {
     width: 270px;
     height: 70px;
     margin-bottom: 19px;
   }
+
+  
 
   @include onDesktop {
     margin-left: 200px;
@@ -24,6 +45,7 @@
   &__arrow {
     position: absolute;
     right: 0;
+    color: $color-white;
 
     @include onTablet {
       width: 70px;
@@ -35,15 +57,6 @@
     position: relative;
     display: inline-block;
     margin-inline: 80px 130px;
-
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: $middle-font;
-    color: $color-black;
-
-    &:hover {
-      color: $color-grey;
-    }
   }
 
   &__button::after {
@@ -69,7 +82,17 @@
 .arrow {
   display: block;
   @include arrow;
+  background-image: url(../images/icons/arrow-icon-white.svg);
   background-color: $color-green;
+}
 
-  @include hover(transform, scale(1.05));
+.ticket {
+  padding: 18px 130px 18px 80px;
+  text-transform: uppercase;
+  font-weight: $middle-font;
+  color: $color-black;
+    
+  &:hover {
+    color: $color-green;
+  }
 }
