--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -146,14 +146,15 @@
   display: inline-block;
   text-decoration: none;
   color: $color-black;
+  transition: color $effectDuration;
 
   &:hover {
-    color: $color-grey;
+    color: $color-orange;
   }
 
   &::after {
     @include underlineLinks;
-    background-color: $color-grey;
+    background-color: $color-orange;
     opacity: 50%;
   }
 
