--- a/src/styles/blocks/footers-style.scss
+++ b/src/styles/blocks/footers-style.scss
@@ -48,10 +48,11 @@
     color: $color-black;
     font-size: 14px;
     line-height: 14px;
+    transition: color $effectDuration;
 
     &::after {
       @include underlineLinks;
-      background-color: $color-grey;
+      background-color: $color-orange;
       opacity: 50%;
     }
 
@@ -61,7 +62,7 @@
   }
 
   &__nav-link:hover {
-    color: $color-grey;
+    color: $color-orange;
   }
 
   &__nav-list {
@@ -229,15 +230,17 @@
     display: inline-block;
     text-decoration: none;
     color: $color-black;
+    transition: color $effectDuration;
+
   }
 
   &__info:hover {
-    color: $color-grey;
+    color: $color-orange;
   }
 
   &__info::after {
     @include underlineLinks;
-    background-color: $color-grey;
+    background-color: $color-orange;
     opacity: 50%;
   }
 
