--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -19,19 +19,13 @@
 }
 
 .menu {
-  height: 399px;
-  background-color: $color-green;
-
-  @include onTablet {
-    height: 225px;
-  }
-
-  @include onDesktop {
-    height: 233px;
-  }
+  height: 100vh;
+  background-color: rgba(24,24,26,0.5);
 
   &__wrapper {
+    height: 399px;
     padding-top: 27px;
+    background-color: $color-green;
 
     @include contentPaddingInline;
 
@@ -39,6 +33,11 @@
 
     @include onTablet {
       padding-top: 39px;
+      height: 225px;
+    }
+
+    @include onDesktop {
+      height: 233px;
     }
   }
 
