--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -16,10 +16,16 @@
     line-height: 16px;
     color: $color-white;
     text-decoration: none;
+
+    &:hover {
+      color: $color-orange;
+    }
+
   }
 
   &__link::after {
     @include underlineLinks;
+    background-color: $color-orange;
   }
 
   &__link:hover::after {
