some fixes in 768 px layout

--- a/src/styles/blocks/address.scss
+++ b/src/styles/blocks/address.scss
@@ -1,6 +1,6 @@
 .address {
-  color: #0F0E08;
-  font-family: IBM Plex Sans;
+  color: #0f0e08;
+  font-family: IBM Plex Sans, sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
