--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -17,7 +17,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
-    margin: 0px 36px 34px;
+    margin: 0 36px 34px;
     justify-content: space-between;
   }
 }
