--- a/src/styles/blocks/line.scss
+++ b/src/styles/blocks/line.scss
@@ -1,4 +1,4 @@
-@use './utils/_mixins.scss' as *;
+@use "./utils/_mixins.scss" as *;
 
 .line {
   display: flex;
@@ -16,9 +16,9 @@
     transform: rotate(-90deg);
     color: #1a5a4c80;
     background-color: #1a5a4c80;
-    border: 0px;
-    margin-top: -110px;
-    margin-bottom: -140px;
+    border: 0;
+    margin-top: -100px;
+    margin-bottom: -100px;
 
     @include forTablet {
       height: 480px;
