--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -8,8 +8,9 @@
   z-index: 99;
   background: #1a5a4c;
   list-style: none;
-  padding: 27px 20px;    color: #fff;
-  font-family: IBM Plex Sans;
+  padding: 27px 20px;
+  color: #fff;
+  font-family: IBM Plex Sans, sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -26,7 +27,7 @@
 
   &__link {
     color: #fff;
-    font-family: IBM Plex Sans;
+    font-family: IBM Plex Sans, sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -43,7 +44,7 @@
 
   &__opening {
     color: #fff;
-    font-family: IBM Plex Sans;
+    font-family: IBM Plex Sans, sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
