--- a/src/styles/blocks/opening.scss
+++ b/src/styles/blocks/opening.scss
@@ -1,6 +1,6 @@
 .opening {
   color: #0f0e08;
-  font-family: IBM Plex Sans;
+  font-family: IBM Plex Sans, sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
