--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -1,4 +1,4 @@
-@use './utils/_mixins.scss' as *;
+@use "./utils/_mixins.scss" as *;
 
 .title {
   font-family: Montserrat, sans-serif;
@@ -14,11 +14,21 @@
     line-height: 36px;
     margin-bottom: 40px;
 
+    @include forTablet {
+      font-size: 48px;
+      line-height: 48px;
+      text-align: left;
+    }
+
     &--subscribe {
+      margin-top: 88px;
+      margin-bottom: 20px;
       color: #fff;
-      margin: 88px 0 20px;
-      position: absolute;
-      z-index: 1;
+
+      @include forTablet {
+        margin-top: 82px;
+        margin-bottom: 16px;
+      }
     }
   }
 
