--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -5,8 +5,6 @@
 }
 
 .button {
-  width: 280px;
-  height: 50px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -15,16 +13,29 @@
   @include forTablet() {
     grid-column: 1 / 4;
     grid-row: 3 / 4;
-    width: 270px;
-    height: 70px;
+
   }
 
   &--green {
     border: 1px solid #1a5a1a4c;
+    width: 280px;
+    height: 50px;
+
+    @include forTablet() {
+      width: 270px;
+      height: 70px;
+    }
   }
 
   &--red {
     border: transparent;
+    width: 280px;
+    height: 50px;
+
+    @include forTablet() {
+      width: 460px;
+      height: 70px;
+    }
   }
 
   &__tickets {
@@ -62,10 +73,16 @@
 
   &__subscribe {
     text-align: left;
-    width: 230px;
     background: #fff;
     border: transparent;
     padding-left: 24px;
+    width: 206px;
+    height: 50px;
+
+    @include forTablet() {
+      width: 350px;
+      height: 70px;
+    }
 
     ::placeholder {
       color: #687480;
