--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -1,9 +1,9 @@
-@use './utils/_mixins.scss' as *;
+@use "./utils/_mixins.scss" as *;
 
 .contact-us {
   display: grid;
   grid-template-columns: 130px 128px;
-  gap: 0px 20px;
+  gap: 0 20px;
 
   &__links {
     margin-bottom: 80px;
