--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -17,6 +17,21 @@
     z-index: 0;
   }
 
+  &__content {
+    display: flex;
+    position: absolute;
+    z-index: 1;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 280px;
+
+    @include forTablet {
+      width: 460px;
+    }
+  }
+
   &__text {
     color: #fff;
     text-align: center;
@@ -25,14 +40,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: 27px;
-    margin: 144px 20px 50px;
-    position: absolute;
-    z-index: 1;
-  }
+    margin-bottom: 50px;
 
-  &__button {
-    margin: 248px 20px 0px;
-    position: absolute;
-    z-index: 1;
+    @include forTablet {
+      margin-bottom: 64px;
+    }
   }
 }
