add task solution

--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -6,10 +6,15 @@
   @include pageGrid;
   padding-top: 50px;
   padding-bottom: 35px;
-  @include PaddingInlain;
+  padding-inline: 20px;
 
   @include onDesktop {
+    padding-inline: 34px;
     padding-top: 47px;
+  }
+
+  @include onDesktop {
+    padding-inline: 55px;
   }
 
   &__top {
