add task solution

--- a/src/styles/galery.scss
+++ b/src/styles/galery.scss
@@ -77,6 +77,9 @@
 }
 
 .photo--0 {
+  max-height: 100vh;
+  max-width: fit-content;
+  margin: 0 auto;
   display: none;
 
   @include onTablet {
@@ -91,9 +94,13 @@
 }
 
 .photo--1 {
+  max-height: 100vh;
+  max-width: fit-content;
+  margin: 0 auto;
   grid-column: 1 / -1;
 
   @include onTablet {
+    height: 100%;
     grid-column: 1 / 4;
   }
 
