add task solution

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -69,11 +69,19 @@
       height: 50px;
       width: 100%;
       border: none;
+      outline: none;
+      resize: none;
+      overflow: auto;
       padding-left: 24px;
 
       &:hover {
         transition: 0.3s;
-        border: 3px solid #f14a27;
+        background-color: rgb(206, 205, 205);
+      }
+
+      &:focus {
+        border: 2px solid #f14a27;
+        background-color: rgb(206, 205, 205);
       }
 
       @include onTablet {
@@ -100,7 +108,7 @@
 
       &:hover {
         transition: 0.3s;
-        border: 3px solid #fff;
+        border: 2px solid #fff;
       }
 
       @include onTablet {
