--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -183,7 +183,7 @@
       display: block;
       height: 1px;
       width: 100%;
-      background-color: $museum-black;
+      background-color: #f14a27;
 
       transition: transform 0.3s;
       transform: scale(0);
