--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -48,7 +48,7 @@
     
 
     @include onTablet {
-      width: 80%;
+      width: 70%;
       top: 15px;
       left: 39px;
       gap: 336px;
@@ -56,7 +56,7 @@
     }
 
     @include onDesktop {
-      width: 60%;
+      width: 50%;
       left: 55px;
       gap: 476px;
     }
@@ -114,6 +114,12 @@
     font-size: 14px;
     line-height: 14px;
     color: $color-grey;
+    text-decoration: none;
+    transition: color $effectDuration;
+
+    &:hover {
+      color: $color-orange;
+    }
   }
 
   &__event:before {
