--- a/src/styles/blocks/icons-logo.scss
+++ b/src/styles/blocks/icons-logo.scss
@@ -26,6 +26,7 @@
   display: block;
   background-image: url(../images/icons/burger-menu-icon.svg);
   background-repeat: no-repeat;
+  padding: 3px;
   width: 24px;
   height: 24px;
 
