--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -196,6 +196,7 @@
 
 .title-lower-fontstyle {
   margin: 0;
+  margin-bottom: 20px;
   font-weight: $small-font;
   font-size: 14px;
   line-height: 19.69px;
