--- a/src/styles/blocks/footers-style.scss
+++ b/src/styles/blocks/footers-style.scss
@@ -138,7 +138,7 @@
     }
 
     @include onDesktop {
-      height: 166px;
+      height: 260px;
       padding-right: 65px;
       border-right: 1px solid #1a5a4c80;
       margin-left: 31px;
@@ -147,6 +147,12 @@
   }
 
   &__contacts {
+    width: 128px;
+
+    @include onTablet {
+      width: 220px;
+    }
+    
     @include onDesktop {
       width: 169px;
       height: 166px;
@@ -167,8 +173,11 @@
 .green-underline {
   grid-column: 1/-1;
   margin-block: 70px 40px;
-  @include underline;
-  
+  // @include underline;
+  display: inline-block;
+  width: 100%;
+  height: 1px;
+  opacity: 50%;
   background-color: $color-green;
 
   @include onTablet {
@@ -231,7 +240,6 @@
     text-decoration: none;
     color: $color-black;
     transition: color $effectDuration;
-
   }
 
   &__info:hover {
