--- a/src/styles/blocks/footers-style.scss
+++ b/src/styles/blocks/footers-style.scss
@@ -152,7 +152,7 @@
     @include onTablet {
       width: 220px;
     }
-    
+
     @include onDesktop {
       width: 169px;
       height: 166px;
@@ -170,10 +170,9 @@
   }
 }
 
-.green-underline {
+.green-line {
   grid-column: 1/-1;
   margin-block: 70px 40px;
-  // @include underline;
   display: inline-block;
   width: 100%;
   height: 1px;
