--- a/src/styles/blocks/footers-style.scss
+++ b/src/styles/blocks/footers-style.scss
@@ -99,6 +99,7 @@
       margin-left: 65px;
       height: 48px;
       grid-column: 8/10;
+      grid-row: 1/2;
     }
   }
 
@@ -111,6 +112,7 @@
 
     @include onDesktop {
       grid-column: 10/12;
+      grid-row: 1/2;
     }
   }
 
@@ -178,6 +180,7 @@
   height: 1px;
   opacity: 50%;
   background-color: $color-green;
+  color: $color-white;
 
   @include onTablet {
     margin-block: 64px;
