--- a/src/styles/blocks/footers-style.scss
+++ b/src/styles/blocks/footers-style.scss
@@ -179,7 +179,7 @@
   width: 100%;
   height: 1px;
   opacity: 50%;
-  background-color: $color-green;
+  background-color: rgba(26, 90, 76, 0.5);
   color: $color-white;
 
   @include onTablet {
