--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,10 +1,11 @@
 .container {
   margin: 0 auto;
-  width: 320px;
+  
   display: grid;
-  grid-template-columns: repeat(2, 130px);
+  grid-template-columns: repeat(2, 1fr);
   column-gap: 20px;
   padding: 0 20px;
+  align-items: center;
 
   @include onTablet {
     width: 768px;
