--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -68,6 +68,10 @@
       font-size: 14px;
       font-weight: 400;
       line-height: 140.63%;
+
+      &:hover {
+        color: $mainRed;
+      }
     }
 
     & > a:first-of-type {
