--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -46,6 +46,10 @@
           width: 370px;
           height: 600px;
         }
+
+        &:hover {
+          transform: scale(1.05);
+        }
       }
 
       &--2 {
@@ -60,6 +64,10 @@
         @include onDesktop {
           display: none;
         }
+
+        &:hover {
+          transform: scale(1.05);
+        }
       }
 
       &--3 {
@@ -69,6 +77,10 @@
           display: block;
           width: 770px;
           height: 600px;
+        }
+
+        &:hover {
+          transform: scale(1.05);
         }
       }
 
@@ -80,6 +92,10 @@
           width: 770px;
           height: 360px;
         }
+
+        &:hover {
+          transform: scale(1.05);
+        }
       }
 
       &--5 {
@@ -89,6 +105,10 @@
           display: block;
           width: 370px;
           height: 360px;
+        }
+
+        &:hover {
+          transform: scale(1.05);
         }
       }
     }
