--- a/src/styles/blocks/actual.scss
+++ b/src/styles/blocks/actual.scss
@@ -1,5 +1,6 @@
 .actual {
   &__photo {
+    margin: 0 auto;
     width: 280px;
     height: 210px;
 
@@ -10,6 +11,10 @@
     @include onDesktop {
       width: 670px;
       height: 520px;
+    }
+
+    &:hover {
+      transform: scale(1.05);
     }
 
     &--1 {
@@ -62,8 +67,9 @@
   }
 
   &__exhibition {
+
     grid-column: 1 / -1;
-    margin-top: 16px;
+    margin: 16px auto 0;
     display: flex;
     flex-direction: column;
     width: 280px;
