--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,7 +3,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 320px;
+    width: 100%;
     height: 300px;
     display: block;
     background-image: url(../images/cover.png);
@@ -52,7 +52,7 @@
     }
   }
   &__button {
-    margin-top: 20px;
+    margin: 20px auto 0;
     width: 280px;
     grid-column: 1 / -1;
 
