--- a/src/styles/blocks/suscribe.scss
+++ b/src/styles/blocks/suscribe.scss
@@ -40,9 +40,8 @@
   }
 
   &__button {
-    width: 280px;
     grid-column: 1 / -1;
-    margin-top: 50px;
+    margin: 50px auto 0;
     padding-bottom: 88px;
 
     @include onTablet {
