--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "header";
+@import "page";
+@import "actual-events";
+@import "galery";
+@import "subscription";
+@import "contact-us";
+@import "menu";
+@import "icon";
