--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -65,6 +65,10 @@
       grid-column: 3 / 6;
     }
 
+    &:hover {
+      transform: scale(1.1);
+    }
+
     &__text {
       width: 230px;
       height: 50px;
