--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,7 @@
 .menu {
   background-color: $mainGreen;
-
+  height: 100vh;
+  // overflow: auto;
   position: fixed;
   top: 0;
   left: 0;
@@ -8,12 +9,14 @@
   transition: all 0.3s;
   opacity: 0;
   pointer-events: none;
+  transform: translateX(-100%);
 
   &:target {
     z-index: 1;
     opacity: 1;
-    // transform: translateX(-100%);
     pointer-events: all;
+    overflow-y: auto;
+    transform: translateX(0%);
   }
 
   &__line {
