--- a/src/styles/blocks/actual.scss
+++ b/src/styles/blocks/actual.scss
@@ -1,7 +1,6 @@
 .actual {
   &__photo {
-    margin: 0 auto;
-    width: 280px;
+    width: 100%;
     height: 210px;
 
     @include onTablet {
@@ -52,6 +51,7 @@
   }
 
   &__title {
+    text-align: start;
     margin-top: 70px;
     grid-column: 1 / -1;
 
@@ -67,9 +67,8 @@
   }
 
   &__exhibition {
-
     grid-column: 1 / -1;
-    margin: 16px auto 0;
+    margin-top: 16px;
     display: flex;
     flex-direction: column;
     width: 280px;
