--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -109,7 +109,7 @@
     margin-top: 20px;
     grid-column: 1 / -1;
     background-color: #1a5a4c80;
-    width: 280px;
+    width: 100%;
     height: 1px;
 
     @include onTablet {
