--- a/src/styles/blocks/suscribe.scss
+++ b/src/styles/blocks/suscribe.scss
@@ -40,16 +40,19 @@
   }
 
   &__button {
-    grid-column: 1 / -1;
+    width: 280px;
+    grid-column: span 2;
     margin: 50px auto 0;
     padding-bottom: 88px;
 
     @include onTablet {
+      width: 460px;
       margin-top: 64px;
       grid-column: 2 / -2;
       padding-bottom: 82px;
     }
     @include onDesktop {
+      width: 570px;
       margin-top: 72px;
       grid-column: 4 / 8;
       padding-bottom: 163px;
