fix mobile version

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -1,29 +1,31 @@
 .events {
-  padding-top: 70px;
-  padding-inline: 16px;
+  // padding-top: 70px;
+  padding-inline: 20px;
+  padding-bottom: 60px;
+  text-align: center;
 
-  @include onTablet {
-    padding-inline: 34px;
-    justify-content: left;
-  }
+  // @include onTablet {
+  //   padding-inline: 34px;
+  //   justify-content: left;
+  // }
 
-  @include onDesctop {
-    padding-inline: 55px;
-  }
+  // @include onDesctop {
+  //   padding-inline: 55px;
+  // }
 
   &__catalog {
     display: flex;
     flex-direction: column;
-    margin: 70px 0 60px;
+    // margin: 70px 0 60px;
     gap: 60px;
 
-  @include onTablet {
-    gap: 64px;
-  }
+  // @include onTablet {
+  //   gap: 64px;
+  // }
 
-  @include onDesctop {
-    gap: 104px;
-  }
+  // @include onDesctop {
+  //   gap: 104px;
+  // }
 }
 
   &__title {
@@ -34,14 +36,16 @@
     color: $c-for-text;
     width: 280px;
 
-    @include onTablet {
-      text-align: left;
-      width: 460px;
-    }
+    padding-bottom: 40px;
 
-    @include onDesctop {
-      font-size: 48px;
-      line-height: 48px;
-    }
+    // @include onTablet {
+    //   text-align: left;
+    //   width: 460px;
+    // }
+
+    // @include onDesctop {
+    //   font-size: 48px;
+    //   line-height: 48px;
+    // }
   }
 }
