--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,37 +1,39 @@
 .gallery {
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  padding: 70px 20px;
+  // display: flex;
+  // flex-direction: column;
+  // gap: 40px;
+  padding-inline: 20px;
 
-  @include onTablet {
-    padding: 0 34px;
-    gap: 46px;
-  }
+  // @include onTablet {
+  //   padding: 0 34px;
+  //   gap: 46px;
+  // }
 
   &__title {
-    margin-top: 180px;
+    margin-top: 240px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 36px;
     color: $c-black;
     text-align: center;
+    padding-bottom: 40px;
 
-    @include onTablet {
-      padding-top: 50px;
-      text-align: left;
-    }
+    // @include onTablet {
+    //   padding-top: 50px;
+    //   text-align: left;
+    // }
   }
 
   &__slider {
     display: flex;
     gap: 16px;
     overflow-x: hidden;
+    padding-bottom: 20px;
 
-    @include onTablet {
-      gap: 20px;
-    }
+    // @include onTablet {
+    //   gap: 20px;
+    // }
   }
 
   &__image {
@@ -48,7 +50,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 20px 0 100px;
+    margin-bottom: 100px;
 
     & :nth-child(-n + 3) {
       margin-right: 22px;
