--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -7,8 +7,8 @@
   background-size: contain;
 
   &--menu {
-    background-image: url(../images/icons/menu.svg);
     margin-right: 88px;
+    background-image: url(../images/icons/menu.svg);
     @include hover(background-image, url(../images/icons/menu-hover.svg));
   }
 
@@ -27,6 +27,7 @@
 
   &--close {
     background-image: url(../images/icons/close.svg);
+    background-size: cover;
     @include hover(background-image, url(../images/icons/close-hover.svg));
   }
 
