--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,8 +3,7 @@
 @import "typography";
 @import "./header.scss";
 @import "./icons.scss";
-@import "./navigation.scss";
-@import "./menu.scss";
+@import "./aside.scss";
 @import "./scroll-top.scss";
 @import "./events.scss";
 @import "./event.scss";
@@ -21,15 +20,9 @@ html {
     overflow: hidden;
     .header,
     .main {
-      background-color: rgba($c-black, $alpha: .3);
+      background-color: rgba($c-black, $alpha: 0.3);
     }
   }
-
-  // &:not(.header:target) {
-  //   .scroll__top {
-  //     display: none;
-  //   }
-  // }
 }
 
 body {
