--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -24,26 +24,26 @@
     color: $background-c-white;
     margin-bottom: 20px;
 
-    @include onTablet {
-      font-size: 48px;
-      line-height: 48px;
-      margin-bottom: 18px;
-    }
+    // @include onTablet {
+    //   font-size: 48px;
+    //   line-height: 48px;
+    //   margin-bottom: 18px;
+    // }
   }
 
   &__description {
     text-align: center;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
     font-size: 18px;
     line-height: 27px;
     color: $background-c-white;
     margin-bottom: 50px;
 
-    @include onTablet {
-      line-height: 18px;
-      margin-bottom: 64px;
-    }
+    // @include onTablet {
+    //   line-height: 18px;
+    //   margin-bottom: 64px;
+    // }
   }
 
   &__input__conteiner {
@@ -56,10 +56,9 @@
     box-sizing: border-box;
     color: $c-for-text;
     width: 230px;
-    padding-left: 16px;
-    width: 230px;
     height: 50px;
-    font-family: 'Montserrat', sans-serif;
+    padding-left: 16px;
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 14px;
@@ -71,10 +70,10 @@
       color: $c-grey;
     }
 
-    @include onTablet {
-      width: 374px;
-      height: 70px;
-    }
+    // @include onTablet {
+    //   width: 374px;
+    //   height: 70px;
+    // }
   }
 
     &__image {
@@ -82,9 +81,9 @@
       background-color: $c-orange;
       padding: 19px 21px;
 
-      @include onTablet {
-        padding: 29px 31px;
-        margin-left: 16px;
-      }
+      // @include onTablet {
+      //   padding: 29px 31px;
+      //   margin-left: 16px;
+      // }
     }
   }
