--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,119 +1,104 @@
 .footer {
   padding-inline: 20px;
-
-  @include onTablet {
-    padding-inline: 34px;
-
-    &__schedule,
-    &__contacts {
-      width: 220px;
-      // margin-left: 40px;
-    }
-
-    &__navigation {
-      width: 440px;
-      justify-content: center;
-      align-items: center;
-      padding: 65px 0 120px 123px;
-    }
-  }
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  color: $c-for-text;
 
   &__wrapper {
-    display: flex;
-  }
-
-  &__navigation__list {
-    list-style: none;
+    margin-top: 50px;
   }
 
   &__icons {
-    margin-top: 50px;
     display: flex;
     justify-content: space-between;
-
-    @include onTablet {
-      flex-direction: column;
-      justify-content: start;
-      align-items: flex-start;
-      margin-right: 40px;
-    }
+    align-items: center;
+    margin-bottom: 40px;
   }
 
   &__media {
     display: flex;
-    justify-content: center;
-    align-items: center;
-
-    & :not(:last-child) {
-      margin-right: 20px;
-    }
-
-    @include onTablet {
-      margin-top: 62px;
-
-      & :not(:last-child) {
-        margin-right: 32px;
-      }
-    }
+    gap: 20px;
   }
 
   &__conteiner {
-    padding: 50px 0 64px;
     display: flex;
     gap: 20px;
+    padding-bottom: 70px;
     border-bottom: 1px solid $background-c-green;
     width: fit-content;
-
-    @include onTablet {
-      gap: 0;
-    }
+    position: relative;
   }
 
   &__title {
-    font-family: 'IBM Plex Sans', sans-serif;
+    padding-bottom: 20px;
     font-weight: 400;
     font-size: 14px;
     line-height: 19px;
-    color: $c-for-text;
-    margin-bottom: 20px;
   }
 
-  &__list {
+  &__schedule__description,
+  &__list,
+  &__nav__list {
     list-style: none;
-  }
-
-  &__link,
-  &__description {
-    text-decoration: none;
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
     line-height: 21px;
-    color: $c-for-text;
   }
 
   &__schedule__time {
-    font-family: 'IBM Plex Sans', sans-serif;
+    text-decoration: none;
     font-weight: 600;
-    font-size: 14px;
-    line-height: 21px;
+  }
+
+  &__schedule__day,
+  &__link {
+    color: inherit;
+    text-decoration: none;
+    font-weight: 400;
+  }
+
+  &__top__button {
+    position: absolute;
+    right: 0;
+    bottom: 20px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    border: 1px solid $background-c-green;
+    background: transparent
+      url(../images/icons/arrow-up.svg) center / 10px auto no-repeat;
+  }
+
+  &__nav {
+    margin: 40px 0 80px;
+  }
+
+  &__nav__list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  &__nav__link {
+    width: 130px;
+    text-decoration: none;
+    color: inherit;
   }
 
   &__bootom {
-    @include onTablet {
-      display: flex;
-      justify-content: space-between;
-    }
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 80px;
+
   }
 
-  &__rights {
+    &__rights {
     text-align: center;
     align-items: center;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 300;
     font-size: 13px;
     line-height: 16px;
-    padding-bottom: 36px;
   }
 }
-
