--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -10,47 +10,49 @@
     background-repeat: no-repeat;
     background-size: contain;
 
-    @include onTablet {
-      width: 100%;
-      height: 384px;
-      background-position: right;
-    }
+    // @include onTablet {
+    //   width: 100%;
+    //   height: 384px;
+    //   background-position: right;
+    // }
 
-    @include onDesctop {
-      height: 655px;
-      display: block;
-    }
+    // @include onDesctop {
+    //   height: 655px;
+    //   display: block;
+    // }
 
   &__nav {
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    padding: 9px 20px;
+    padding-inline: 20px;
+    padding-top: 9px;
 
-    @include onTablet {
-      display: grid;
-      grid-template-columns: 60% 40%;
-      padding: 15px 34px;
-    }
+    // @include onTablet {
+    //   display: grid;
+    //   grid-template-columns: 60% 40%;
+    //   padding: 15px 34px;
+    // }
   }
 
   &__bottom {
+    padding-top: 250px;
+    padding-inline: 20px;
+
     margin-bottom: 70px;
-    padding-left: 20px;
+    // @include onTablet {
+    //   display: flex;
+    //   flex-direction: column;
+    //   justify-content: left;
+    //   align-items: start;
+    //   padding-left: 34px;
+    // }
 
-    @include onTablet {
-      display: flex;
-      flex-direction: column;
-      justify-content: left;
-      align-items: start;
-      padding-left: 34px;
-    }
-
-    @include onDesctop {
-      padding-top: 143px;
-      align-items: flex-end;
-      width: 470px;
-    }
+    // @include onDesctop {
+    //   padding-top: 143px;
+    //   align-items: flex-end;
+    //   width: 470px;
+    // }
   }
 
   &__title {
@@ -84,6 +86,7 @@
   }
 
   &__bottom__link {
+    display: block;
     border: 1px solid $background-c-green;
     text-decoration: none;
     color: $c-for-text;
@@ -91,23 +94,25 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
-    width: 230px;
+    height: 50px;
+    width: 280px;
     padding: 15px 0;
 
     box-sizing: border-box;
 
-    @include onTablet {
-      width: 220px;
-      padding: 26px 0;
-    }
+    // @include onTablet {
+    //   width: 220px;
+    //   padding: 26px 0;
+    // }
   }
 
   &__bottom__button {
     background-color: $background-c-green;
     padding: 16px 21px;
 
-    @include onTablet {
-      padding: 24px 31px;
-    }
+
+    // @include onTablet {
+    //   padding: 24px 31px;
+    // }
   }
 }
