--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -26,18 +26,27 @@
     position: absolute;
     z-index: 1;
     top: 9px;
-    left: 50%;
-    transform: translate(-50%);
+    left: 132px;
 
     @include forTablet() {
       top: 15px;
-      left: 25%;
+      left: 0px;
+    }
+
+    @include forDesktop() {
+
     }
   }
 
   &__button {
-    @include forTablet () {
+    @include forTablet() {
       margin-left: 34px;
+    }
+
+    @include forDesktop() {
+      margin-left: 0px;
+      margin-right: 30px;
+      margin-bottom: 118px;
     }
   }
 
@@ -59,6 +68,11 @@
       grid-row: 1 / -1;
       background-size: 110% auto;
     }
+
+    @include forDesktop() {
+      height: 655px;
+      grid-column: 6 / -1;
+    }
   }
 
   &__title {
@@ -70,6 +84,12 @@
       text-align: left;
       margin-left: 34px;
     }
+
+    @include forDesktop() {
+      grid-column: 1 / 6;
+      margin-left: 55px;
+      margin-bottom: 89px;
+    }
   }
 
   @include forTablet() {
@@ -79,5 +99,12 @@
     grid-template-rows: repeat(3, 130px);
     height: 384px;
     margin-bottom: 88px;
+  }
+
+  @include forDesktop() {
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(3, 220px);
+    height: 655px;
+    margin-bottom: 200px;
   }
 }
