--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -1,3 +1,13 @@
+@use "./utils/_mixins.scss" as *;
+
 .main {
   padding: 0 20px;
+
+  @include forTablet() {
+    padding: 0 34px;
+  }
+
+  @include forDesktop() {
+    padding: 0 55px;
+  }
 }
