--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -9,6 +9,15 @@
   text-align: center;
   color: #0f0e08;
 
+  @include forTablet() {
+    line-height: 65px;
+  }
+
+  @include forDesktop() {
+    line-height: 86.5px;
+    font-size: 72px;
+  }
+
   &__secondary {
     font-size: 36px;
     line-height: 36px;
