events for desktop ready

--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -29,6 +29,10 @@
       text-align: left;
     }
 
+    @include forDesktop() {
+      margin-bottom: 56px;
+    }
+
     &--subscribe {
       margin-top: 88px;
       margin-bottom: 20px;
@@ -47,6 +51,11 @@
     line-height: 28px;
     letter-spacing: 0;
     text-align: left;
+
+    @include forDesktop() {
+      font-size: 36px;
+      line-height: 36px;
+    }
   }
 
   &__fourth {
@@ -69,6 +78,10 @@
   &--rectangle {
     margin-bottom: 10px;
 
+    @include forDesktop() {
+      margin-bottom: 15px;
+    }
+
     &::after {
       content: "";
       display: inline-block;
@@ -76,6 +89,11 @@
       height: 10px;
       background-image: url(../images/icons/rectangle_red.svg);
       margin-bottom: 2px;
+
+      @include forDesktop() {
+        width: 15px;
+        height: 15px;
+      }
     }
   }
 
