--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,7 +1,10 @@
+@use "./utils/_mixins.scss" as *;
+
 .events {
   font-family: IBM Plex Sans, sans-serif;
   font-size: 16px;
   font-weight: 300;
+  font-style: normal;
   line-height: 24px;
   letter-spacing: 0;
   text-align: left;
@@ -13,19 +16,57 @@
     color: #687480;
     margin-bottom: 15px;
 
+    @include forDesktop() {
+      font-size: 14px;
+      line-height: 14px;
+      margin-bottom: 32px;
+    }
+
     &--highlight {
       font-weight: 700;
       line-height: 24px;
       color: #1a5a1a;
+
+      @include forDesktop() {
+        line-height: 21px;
+      }
     }
   }
 
   &__info {
     color: #4e4e4e;
     margin-bottom: 60px;
+
+    @include forDesktop() {
+      line-height: 24px;
+    }
   }
 
   &__picture {
     margin-bottom: 20px;
+
+    @include forDesktop() {
+      grid-column: 1 / 7;
+    }
+  }
+
+  &__title {
+    @include forDesktop() {
+      grid-column: 1 / 6;
+    }
+  }
+
+  &__content {
+    @include forDesktop() {
+      grid-column: 8 / 12;
+      margin-top: 163px;
+    }
+  }
+
+  @include forDesktop() {
+    display: grid;
+    grid-template-columns: repeat(12, 70px);
+    gap: 30px;
+    margin-bottom: 104px;
   }
 }
