--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -30,11 +30,7 @@
 
     @include forTablet() {
       top: 15px;
-      left: 0px;
-    }
-
-    @include forDesktop() {
-
+      left: 0;
     }
   }
 
@@ -44,7 +40,7 @@
     }
 
     @include forDesktop() {
-      margin-left: 0px;
+      margin-left: 0;
       margin-right: 30px;
       margin-bottom: 118px;
     }
