separator for desktop ready

--- a/src/styles/blocks/separator.scss
+++ b/src/styles/blocks/separator.scss
@@ -12,6 +12,11 @@
     margin: 0 -20px 164px;
   }
 
+  @include forDesktop() {
+    height: 550px;
+    margin: 0 -55px 164px;
+  }
+
   &__image {
     background-image: url(../images/separator_image.jpg);
     background-position: center;
@@ -52,9 +57,14 @@
     position: absolute;
     z-index: 1;
 
-    @include forTablet {
+    @include forTablet() {
       padding: 45px 55px;
       margin: 306px 65px 0;
+    }
+
+    @include forDesktop() {
+      padding: 45px 100px 50px;
+      margin: 432px 355px 0;
     }
   }
 }
