--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -101,5 +101,10 @@
     font-size: 28px;
     font-weight: 400;
     line-height: 28px;
+
+    @include forDesktop() {
+      font-size: 36px;
+      line-height: 36px;
+    }
   }
 }
