fix tablet version

--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -1,12 +1,12 @@
 .event {
   text-align: left;
-  width: 280px;
+  // width: 280px;
 
   // &__image__container {
     // max-width: 280px;
 
     // @include onTablet {
-    //     max-width: 700px;
+    //   max-width: 700px;
     // }
 
     // @include onDesctop {
@@ -19,22 +19,20 @@
     // height: auto;
     margin-bottom: 20px;
 
-    // @include onTablet {
-    //   margin-bottom: 40px;
-    // }
+    @include onTablet {
+      margin-bottom: 40px;
+    }
   }
 
-  // &__conteiner {
-    // width: 280px;
-
-    // @include onTablet {
-    //   width: 460px;
-    // }
+  &__conteiner {
+    @include onTablet {
+      width: 460px;
+    }
 
     // @include onDesctop {
     //   width: 370px;
     // }
-  // }
+  }
 
   &__subtitle {
     text-transform: uppercase;
@@ -44,6 +42,10 @@
     line-height: 16px;
     color: $c-grey;
     margin-bottom: 10px;
+
+    @include onTablet {
+      margin-bottom: 30px;
+    }
 
     // @include onDesctop {
     //   font-size: 14px;
@@ -57,10 +59,10 @@
     color: $background-c-green;
     margin-left: 55px;
 
-    // @include onDesctop {
-    //   font-size: 14px;
-    //   line-height: 21px;
-    // }
+    @include onDesctop {
+      font-size: 14px;
+      line-height: 21px;
+    }
   }
 
   &__title {
@@ -71,10 +73,11 @@
     color: $c-for-text;
     margin-bottom: 10px;
 
-    // @include onDesctop {
-    //   font-size: 36px;
-    //   line-height: 36px;
-    // }
+    @include onDesctop {
+      font-size: 36px;
+      line-height: 36px;
+      margin-bottom: 15px;
+    }
 
     // &::after {
     //   content: "";
