--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -1,17 +1,21 @@
 .events {
-  // padding-top: 70px;
   padding-inline: 20px;
   padding-bottom: 60px;
   text-align: center;
 
-  // @include onTablet {
-  //   padding-inline: 34px;
-  //   justify-content: left;
-  // }
+  @include onTablet {
+    padding-inline: 34px;
+    justify-content: left;
+    padding-bottom: 0;
+  }
 
   // @include onDesctop {
   //   padding-inline: 55px;
   // }
+
+  &__wrapper {
+    margin: 88px 0 112px;
+  }
 
   &__catalog {
     display: flex;
@@ -19,9 +23,9 @@
     // margin: 70px 0 60px;
     gap: 60px;
 
-  // @include onTablet {
-  //   gap: 64px;
-  // }
+  @include onTablet {
+    gap: 64px;
+  }
 
   // @include onDesctop {
   //   gap: 104px;
@@ -38,10 +42,12 @@
 
     padding-bottom: 40px;
 
-    // @include onTablet {
-    //   text-align: left;
-    //   width: 460px;
-    // }
+    @include onTablet {
+      padding-bottom: 48px;
+
+      // text-align: left;
+      // width: 460px;
+    }
 
     // @include onDesctop {
     //   font-size: 48px;
