--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,17 +1,13 @@
 .gallery {
-  // display: flex;
-  // flex-direction: column;
-  // gap: 40px;
   padding-inline: 20px;
 
-  // @include onTablet {
-  //   padding: 0 34px;
-  //   gap: 46px;
-  // }
+  @include onTablet {
+    padding-inline: 34px;
+  }
 
   &__title {
     margin-top: 240px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 36px;
@@ -19,10 +15,11 @@
     text-align: center;
     padding-bottom: 40px;
 
-    // @include onTablet {
-    //   padding-top: 50px;
-    //   text-align: left;
-    // }
+    @include onTablet {
+      margin-top: 208px;
+      padding-bottom: 48px;
+      text-align: left;
+    }
   }
 
   &__slider {
