--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,20 +1,23 @@
 .header {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
     text-align: center;
     box-sizing: border-box;
-    height: 100vh;
+    padding-inline: 20px;
+    // height: 100vh;
 
     background-image: url(..//images/mobile-muzej.png);
     background-repeat: no-repeat;
     background-size: contain;
 
-    // @include onTablet {
-    //   width: 100%;
-    //   height: 384px;
-    //   background-position: right;
-    // }
+    @include onTablet {
+      padding-inline: 34px;
+
+      background-image: url(..//images/mobile-muzej.png);
+      background-size: 384px 374px;
+      background-position: right;
+    }
 
     // @include onDesctop {
     //   height: 655px;
@@ -25,7 +28,7 @@
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    padding-inline: 20px;
+    // padding-inline: 20px;
     padding-top: 9px;
 
     // @include onTablet {
@@ -35,18 +38,30 @@
     // }
   }
 
+  &__link__wrapper {
+    margin-left: 88px;
+
+    @include onTablet {
+      width: 220px;
+      padding-left: 100px;
+      margin-left: 220px;
+    }
+  }
+
   &__bottom {
     padding-top: 250px;
-    padding-inline: 20px;
-
+    // padding-inline: 20px;
     margin-bottom: 70px;
-    // @include onTablet {
-    //   display: flex;
-    //   flex-direction: column;
-    //   justify-content: left;
-    //   align-items: start;
-    //   padding-left: 34px;
-    // }
+
+    @include onTablet {
+      display: flex;
+      flex-direction: column;
+      justify-content: left;
+      align-items: start;
+      padding: 0;
+      // padding-inline: 34px;
+      margin-bottom: 19px;
+    }
 
     // @include onDesctop {
     //   padding-top: 143px;
@@ -64,25 +79,31 @@
     margin-bottom: 20px;
 
     @include onTablet {
+      margin: 64px 0 38px;
       font-size: 54px;
       line-height: 64px;
-      // max-width: 340px;
       text-align: left;
+      // margin-bottom: 0;
+      // max-width: 340px;
     }
 
-    @include onDesctop {
-      font-size: 72px;
-      line-height: 86px;
-    }
+    // @include onDesctop {
+    //   font-size: 72px;
+    //   line-height: 86px;
+    // }
   }
 
   &__bottom__container {
     display: flex;
     justify-content: center;
 
-    @include onDesctop {
-      margin-top: 69px;
-    }
+    // @include onTablet {
+    //   margin-top: 38px;
+    // }
+
+    // @include onDesctop {
+    //   margin-top: 69px;
+    // }
   }
 
   &__bottom__link {
@@ -100,19 +121,20 @@
 
     box-sizing: border-box;
 
-    // @include onTablet {
-    //   width: 220px;
-    //   padding: 26px 0;
-    // }
+    @include onTablet {
+      width: 200px;
+      height: 70px;
+      padding: 28px 0;
+    }
   }
 
   &__bottom__button {
+    box-sizing: border-box;
     background-color: $background-c-green;
     padding: 16px 21px;
 
-
-    // @include onTablet {
-    //   padding: 24px 31px;
-    // }
+    @include onTablet {
+      padding: 25.5px 31px;
+    }
   }
 }
