--- a/src/styles/lections.scss
+++ b/src/styles/lections.scss
@@ -9,7 +9,12 @@
 
   @include onTablet {
     height: 390px;
-    padding-inline: 34px;
+  }
+
+  &__wrapper {
+    @include onTablet {
+      margin-inline: 34px;
+    }
   }
 
   &__container {
@@ -54,7 +59,7 @@
   }
 
   &__name {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 28px;
     line-height: 28px;
