--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -17,18 +17,18 @@
   }
 
   &__title {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 36px;
     color: $background-c-white;
     margin-bottom: 20px;
 
-    // @include onTablet {
-    //   font-size: 48px;
-    //   line-height: 48px;
-    //   margin-bottom: 18px;
-    // }
+    @include onTablet {
+      font-size: 48px;
+      line-height: 48px;
+      // margin-bottom: 18px;
+    }
   }
 
   &__description {
@@ -40,10 +40,10 @@
     color: $background-c-white;
     margin-bottom: 50px;
 
-    // @include onTablet {
-    //   line-height: 18px;
-    //   margin-bottom: 64px;
-    // }
+    @include onTablet {
+      line-height: 18px;
+      margin-bottom: 64px;
+    }
   }
 
   &__input__conteiner {
@@ -70,10 +70,10 @@
       color: $c-grey;
     }
 
-    // @include onTablet {
-    //   width: 374px;
-    //   height: 70px;
-    // }
+    @include onTablet {
+      width: 374px;
+      height: 70px;
+    }
   }
 
     &__image {
@@ -81,9 +81,9 @@
       background-color: $c-orange;
       padding: 19px 21px;
 
-      // @include onTablet {
-      //   padding: 29px 31px;
-      //   margin-left: 16px;
-      // }
+      @include onTablet {
+        padding: 29px 31px;
+        margin-left: 16px;
+      }
     }
   }
