--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,7 +27,7 @@ html {
 
 body {
   background: $background-c-white;
-  font-family: 'IBM Ple x Sans', sans-serif;
+  font-family: "IBM Ple x Sans", sans-serif;
   color: $c-for-text;
   margin: 0;
 }
