fix tablet version

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -44,8 +44,8 @@
 
     @include onTablet {
       padding-bottom: 48px;
-
-      // text-align: left;
+      width: 100%;
+      text-align: left;
       // width: 460px;
     }
 
